[gd_scene load_steps=19 format=3 uid="uid://da11alxwr8dog"]

[ext_resource type="Script" path="res://scripts/defenders/defender.gd" id="1_ewm5o"]
[ext_resource type="PackedScene" uid="uid://cm8u50gnnvkyh" path="res://scenes/game elements/shooting_area.tscn" id="2_jhv3c"]
[ext_resource type="Texture2D" uid="uid://be37bd6148pwg" path="res://assets/defenders/pistol.png" id="4_dhq7h"]
[ext_resource type="Texture2D" uid="uid://c7kdwubxaqldb" path="res://assets/defenders/Defender.png" id="4_shey4"]
[ext_resource type="Texture2D" uid="uid://dsry7bjgqs47t" path="res://assets/defenders/player sprites/death-animation/defender-death.png" id="5_dq8s7"]
[ext_resource type="Texture2D" uid="uid://bolph13aj2ubk" path="res://assets/defenders/player sprites/idle-animation/defender-spritesheet.png" id="5_gwacj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ok3u"]
size = Vector2(55, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_hecyx"]
atlas = ExtResource("5_dq8s7")
region = Rect2(0, 0, 605, 570)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oos3"]
atlas = ExtResource("5_dq8s7")
region = Rect2(605, 0, 605, 570)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc0aj"]
atlas = ExtResource("5_dq8s7")
region = Rect2(1210, 0, 605, 570)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox6xt"]
atlas = ExtResource("5_dq8s7")
region = Rect2(1815, 0, 605, 570)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vc4l"]
atlas = ExtResource("5_dq8s7")
region = Rect2(2420, 0, 605, 570)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptfpt"]
atlas = ExtResource("5_dq8s7")
region = Rect2(3025, 0, 605, 570)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0twt"]
atlas = ExtResource("5_dq8s7")
region = Rect2(3630, 0, 605, 570)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyary"]
atlas = ExtResource("5_gwacj")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5gba"]
atlas = ExtResource("5_gwacj")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n765"]
atlas = ExtResource("5_gwacj")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_o4j1m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hecyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oos3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc0aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox6xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vc4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptfpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0twt")
}],
"loop": true,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyary")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5gba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n765")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Character" type="Area2D"]
script = ExtResource("1_ewm5o")

[node name="Shooting_area" parent="." instance=ExtResource("2_jhv3c")]
position = Vector2(42, -8)
scale = Vector2(1.09427, 0.766947)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_1ok3u")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, -1.90735e-06)
scale = Vector2(0.1115, 0.1115)
texture = ExtResource("4_dhq7h")

[node name="Timer" type="Timer" parent="."]

[node name="Defender" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.127132, 0.127132)
texture = ExtResource("4_shey4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-8, -8)
scale = Vector2(0.127, 0.127)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
position = Vector2(62.9921, -62.9921)
scale = Vector2(1.00166, 1.00166)
sprite_frames = SubResource("SpriteFrames_o4j1m")
animation = &"idle"

[node name="animation_delay" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="animation_delay" to="." method="_on_animation_delay_timeout"]
